--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -140,7 +140,7 @@ import "../styles/global.css";
     </div>
 
     <script>
-        const API_URL = 'https://xpz21v8w-5000.use2.devtunnels.ms/api/auth/login';
+        const API_URL = 'https://xpz21v8w-8000.use2.devtunnels.ms/api/login/';
 
         function togglePassword() {
             const passwordInput = document.getElementById('password');
